src/main/default/objects/Ticket__c/Ticket__c.object-meta.xml
<CustomObject>
    <label>Ticket</label>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Ticket ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>