src/main/default/objects/Ticket__c/fields/Checklist_Name__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Name__c</fullName>
    <description>The name of the checklist assigned to this ticket</description>
    <inlineHelpText>Name of the checklist used on the ticket.</inlineHelpText>
    <label>Checklist Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>