src/main/default/objects/Ticket__c/fields/Customer_Survey_Performance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey_Performance__c</fullName>
    <inlineHelpText>Customer's rating of the job crew's performance.</inlineHelpText>
    <label>Customer Survey Performance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>