src/main/default/objects/Ticket__c/fields/Customer_Survey_Safety__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey_Safety__c</fullName>
    <inlineHelpText>Customer's rating of the job crew's commitment to safety.</inlineHelpText>
    <label>Customer Survey Safety</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Safety Issues</fullName>
            </value>
            <value>
                <fullName>Safety Issues were a Problem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>