src/main/default/objects/Ticket__c/fields/Customer_Survey_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey_Satisfaction__c</fullName>
    <inlineHelpText>Customer's rating of the work completed for the ticket.</inlineHelpText>
    <label>Customer Survey Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Disappointed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>