src/main/default/objects/Ticket__c/fields/IsReadOnlyOnConsole__c.field-meta.xml
<CustomField>
    <fullName>IsReadOnlyOnConsole__c</fullName>
    <description>If the job status or ticket status is readonly for console, then the ticket is readonly</description>
    <formula>INCLUDES(Job__r.Status__r.Read_Only_Apps__c, "Console") ||  INCLUDES(Status__r.Read_Only_Apps__c, 'Console')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsReadOnlyOnConsole</label>
    <type>Checkbox</type>
</CustomField>