src/main/default/objects/Ticket__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <inlineHelpText>Job for which the ticket was added.</inlineHelpText>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>