src/main/default/objects/Ticket__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <formula>Job__r.Office__r.Name</formula>
    <inlineHelpText>Office responsible for performing the work listed on the ticket.</inlineHelpText>
    <label>Office</label>
    <type>Text</type>
</CustomField>