src/main/default/objects/Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Current status of the ticket.</inlineHelpText>
    <label>Status</label>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>