src/main/default/objects/Ticket__c/fields/Ticket_Date__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>The date for this ticket.</description>
    <inlineHelpText>Date the ticket was added.</inlineHelpText>
    <label>Ticket Date</label>
    <type>Date</type>
</CustomField>