src/main/default/objects/Ticket__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Warehouse where equipment included on the ticket is stored. When you select a warehouse, ticket items will be from the specified warehouse by default.</inlineHelpText>
    <label>Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>