src/main/default/objects/Ticket__c/fields/Work_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_End_Date__c</fullName>
    <description>The date/time that the work ended for this ticket.</description>
    <inlineHelpText>Date and time that work finished on the ticket.</inlineHelpText>
    <label>Work End Date</label>
    <type>DateTime</type>
</CustomField>