src/main/default/objects/Ticket__c/fields/Work_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Start_Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <description>The date/time the work started for this ticket.</description>
    <inlineHelpText>Date and time that work started on the ticket.</inlineHelpText>
    <label>Work Start Date</label>
    <type>DateTime</type>
</CustomField>