src/main/default/objects/Ticket__c/recordTypes/Field_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Field_Ticket</fullName>
    <active>true</active>
    <label>Field Ticket</label>
</RecordType>