src/main/default/objects/Ticket__c/listViews/All_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Job__c</columns>
    <columns>Ticket_Date__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Tickets</label>
    <language>en_US</language>
</ListView>